--- a/Powwow/Base.lproj/Main.storyboard
+++ b/Powwow/Base.lproj/Main.storyboard
@@ -114,26 +114,26 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="95"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="49D-Wm-UpF">
-                                                    <rect key="frame" x="8" y="8" width="584" height="49"/>
-                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                </textView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YiL-f8-90l">
                                                     <rect key="frame" x="8" y="65" width="584" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="49D-Wm-UpF">
+                                                    <rect key="frame" x="48" y="8" width="504" height="49"/>
+                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="49D-Wm-UpF" firstAttribute="top" secondItem="IBC-K8-ian" secondAttribute="topMargin" id="1L2-WY-ZSa"/>
-                                                <constraint firstItem="49D-Wm-UpF" firstAttribute="leading" secondItem="YiL-f8-90l" secondAttribute="leading" id="1RB-d5-mC1"/>
-                                                <constraint firstItem="49D-Wm-UpF" firstAttribute="trailing" secondItem="YiL-f8-90l" secondAttribute="trailing" id="Y8t-Ua-7Yw"/>
-                                                <constraint firstItem="YiL-f8-90l" firstAttribute="top" secondItem="49D-Wm-UpF" secondAttribute="bottom" constant="8" symbolic="YES" id="cTI-Pn-m0o"/>
+                                                <constraint firstItem="49D-Wm-UpF" firstAttribute="leading" secondItem="IBC-K8-ian" secondAttribute="leadingMargin" constant="40" id="3sj-yG-I3V"/>
+                                                <constraint firstItem="YiL-f8-90l" firstAttribute="top" secondItem="49D-Wm-UpF" secondAttribute="bottom" constant="8" symbolic="YES" id="E60-lQ-5NZ"/>
+                                                <constraint firstItem="49D-Wm-UpF" firstAttribute="centerX" secondItem="YiL-f8-90l" secondAttribute="centerX" id="KEe-fi-eJn"/>
+                                                <constraint firstItem="49D-Wm-UpF" firstAttribute="top" secondItem="IBC-K8-ian" secondAttribute="topMargin" id="Kpl-dm-A4f"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="YiL-f8-90l" secondAttribute="bottom" constant="1" id="eCR-Cr-9xI"/>
-                                                <constraint firstItem="49D-Wm-UpF" firstAttribute="leading" secondItem="IBC-K8-ian" secondAttribute="leadingMargin" id="lap-gc-jQ9"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="49D-Wm-UpF" secondAttribute="trailing" constant="40" id="kB0-iq-wYT"/>
                                                 <constraint firstItem="YiL-f8-90l" firstAttribute="trailing" secondItem="IBC-K8-ian" secondAttribute="trailingMargin" id="vki-Zh-NUR"/>
                                             </constraints>
                                         </tableViewCellContentView>
